--- a/NoShop.theme.css
+++ b/NoShop.theme.css
@@ -4,6 +4,7 @@
  * @author qxxst
  * @website https://github.com/qxxst/NoShop
  * @version 1.1
+ * @authorLink https://github.com/qxxst
  */
 [class*="avatarDecoration"] {
   display: none;
