--- a/NoShop.theme.css
+++ b/NoShop.theme.css
@@ -11,6 +11,7 @@
 [class*="avatarDecoration"] {
   display: none;
 }
+
 [class*="profileEffect"] {
   display: none;
 }
@@ -19,6 +20,11 @@
 [class*="shopForAllWinterBackground"] {
   display: none;
 }
+
 [data-list-item-id="private-channels-uid_241___shop"] {
+  display: none;
+}
+
+[class*="shopForAllBackgroundImage"] {
   display: none;
 }
