--- a/NoShop.theme.css
+++ b/NoShop.theme.css
@@ -28,3 +28,7 @@
 [class*="shopForAllBackgroundImage"] {
   display: none;
 }
+
+.channel_c21703 [data-list-item-id="private-channels-uid_11769___shop"] {
+  display: none;
+}
