--- a/NoShop.theme.css
+++ b/NoShop.theme.css
@@ -32,3 +32,7 @@
 .channel_c21703 [data-list-item-id="private-channels-uid_11769___shop"] {
   display: none;
 }
+
+.channel_c21703 .container__8759a {
+  display: none;
+}
